--- a/idk/package.json
+++ b/idk/package.json
@@ -14,7 +14,7 @@
     "graphql": "^16.6.0",
     "luxon": "^3.0.3",
     "micro": "^9.4.1",
-    "next": "12.3.0",
+    "next": "^13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^1.3.0"
